12 elementos en ventas

--- a/Ventas.html
+++ b/Ventas.html
@@ -107,6 +107,56 @@
           </div>
         </div>
       </div>
+      <div class="project-item">
+        <div class="project-info">
+          <div class="project-img">
+            <img src="Assets/medicamento para las pulgas.png" width="70px" height="50px" alt="medicamento para las pulgas">
+            <h2>MEDICAMNETO PARA PULGAS</h2>
+            <h2>$250</h2>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
+          </div>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-info">
+          <div class="project-img">
+            <img src="Assets/correa retractil para perros y mascotas medianas.jpg" width="70px" height="50px" alt="correa retractil para mascotas medianas"
+            <h2>CORREA RETRACTIL PARA MASCOTAS</h2>
+            <h2>$120</h2>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
+          </div>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-info">
+          <div class="project-img">
+            <img src="Assets/shampoo para gastos y perros.png" width="70px" height="50px" alt="shampoo para gatos y perros">
+            <h2>SHAMPOO PARA PERROS Y GATOS</h2>
+            <h2>$75</h2>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
+          </div>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-info">
+          <div class="project-img">
+            <img src="Assets/cepillo para perros y gatos.jpg" width="70px" height="50px" alt="cepillo para perros y gatos">
+            <h2>CEPILLO PARA PERROS Y GATOS</h2>
+            <h2>$200</h2>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
+          </div>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-info">
+          <div class="project-img">
+            <img src="Assets/cortador de uñas para perros y gatos.webp" width="70px" height="50px" alt="cortador de uñas para perros y gatos">
+            <h2>CORTADOR DE UÑAS PARA PERROS Y GATOS</h2>
+            <h2>$100</h2>
+            <button onclick="redireccionar()"class="buy-button">Comprar</button>
+          </div>
+        </div>
+      </div>
       <!-- Agregar más elementos de tienda aquí -->
     </div>
   </section>
